# gRouter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  grpc.md  learning_bazel.md  production_readiness.md
configs/: config.yaml
deployments/: Dockerfile
deployments/docker-compose/: docker-compose.yml  logging_learning.md  monitoring_learning.md
deployments/docker-compose/config/fluentd/: Dockerfile  fluent.conf
deployments/docker-compose/config/grafana/provisioning/dashboards/json/: go-metrics.json
deployments/docker-compose/config/prometheus/: prometheus.yml
deployments/docker-compose/monitoring/: docker-compose.yml
deployments/helm/grouter/: Chart.yaml  values.yaml
deployments/helm/grouter/templates/: _helpers.tpl
deployments/helm/grouter/templates/infrastructure/: fluentd.yaml  grafana.yaml  jaeger.yaml  keycloak.yaml  nats.yaml  opensearch.yaml  prometheus.yaml
deployments/helm/grouter/templates/services/: natsdemosvc.yaml  webdemosvc.yaml
deployments/k8s/infrastructure/: fluentd.yaml  grafana.yaml  jaeger.yaml  keycloak.yaml  nats.yaml  opensearch-dashboards.yaml  opensearch.yaml  prometheus.yaml
deployments/k8s/services/: natsdemosvc.yaml  webdemosvc.yaml
docs/: BUILD.bazel  architecture.md  docs.go  swagger.json  swagger.yaml  technical_documentation.md  web_service_standard.md
pkg/config/: BUILD.bazel  README.md  config.go  config_test.go  learning.md  types.go  types_test.go
pkg/database/: BUILD.bazel  database.go  database_learning.md  database_test.go  metrics.go  pagination.go  repository.go  repository_test.go  transaction_test.go
pkg/health/: BUILD.bazel  health.go  health_test.go  learning_health.md
pkg/logger/: BUILD.bazel  README.md  README_TESTS.md  context.go  context_test.go  learning.md  logger.go  logger_test.go
pkg/manager/: BUILD.bazel  README.md  health.md  learning.md  manager.go  manager_init_test.go  manager_test.go  otel_integration_plan.md  router.go  router_test.go  store.go  types.go
pkg/messaging/nats/: BUILD.bazel  README.md  client.go  client_test.go  jetstream_test.go  messenger.go  messenger_test.go  middleware.go  middleware_test.go  nats_enhancement.md  nats_learning.md  publisher.go  publisher_test.go  pull_test.go  subscriber.go  subscriber_test.go  tracing.go  types.go  types_test.go  validator.go  validator_test.go
pkg/messaging/nats/test/publisher/: BUILD.bazel  ca.pem  config.yaml  main.go  operator.jwt  server.key  server.pem  user.creds
pkg/messaging/nats/test/subscriber/: BUILD.bazel  client-cert.pem  client-key.pem  config.yaml  main.go  nats-server.conf
pkg/telemetry/: BUILD.bazel  metrics.go  middleware.go  telemetry.go  telemetry_learning.md  telemetry_test.go  tracer.go  tracer_test.go
pkg/web/: BUILD.bazel  README.md  auth.go  auth.md  benchmark_test.go  config.go  integration_test.go  metrics.go  metrics.md  middleware_test.go  ratelimit.go  requestid.go  server.go  server_test.go  types.go  web_learning.md
services/natsdemosvc/: Dockerfile  go.mod  go.sum
services/natsdemosvc/cmd/natsdemosvc/: BUILD.bazel  main.go
services/natsdemosvc/cmd/verifier/: BUILD.bazel  main.go
services/natsdemosvc/internal/app/: BUILD.bazel  app.go  app_learning.md  app_start_stop.txt  app_test.go  bootstrap.go  bootstrap_test.go  health.go  integration_test.go  learning.md  stop.go  stop_test.go
services/natsdemosvc/internal/config/: BUILD.bazel  config.yaml
services/natsdemosvc/internal/domain/: BUILD.bazel  models.go
services/natsdemosvc/internal/pkg/natdemo/: BUILD.bazel  config.go  natdemo_test.go  nats.go  service.go
services/webdemosvc/: Dockerfile  README.md
services/webdemosvc/cmd/verifier/: BUILD.bazel  main.go
services/webdemosvc/cmd/webdemosvc/: BUILD.bazel  main.go
services/webdemosvc/internal/app/: BUILD.bazel  app.go  bootstrap.go  health.go  integration_test.go  stop.go
services/webdemosvc/internal/config/: config.yaml
services/webdemosvc/internal/pkg/webdemo/: BUILD.bazel  config.go  handler.go  handler_test.go
tools/: Vagrantfile
tools/gazelle/: gazelle.yaml  gazelle_learning.md
