load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "types.go",
    ],
    importpath = "grouter/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "config_test.go",
        "types_test.go",
    ],
    embed = [":config"],
    deps = [
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)
