load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "health",
    srcs = ["health.go"],
    importpath = "grouter/pkg/health",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_test(
    name = "health_test",
    srcs = ["health_test.go"],
    embed = [":health"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
    ],
)
