load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "manager",
    srcs = [
        "manager.go",
        "router.go",
        "store.go",
        "types.go",
    ],
    importpath = "grouter/pkg/manager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/health",
        "//pkg/logger",
        "//pkg/messaging/nats",
        "//pkg/telemetry",
        "//pkg/web",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "manager_test",
    srcs = [
        "manager_init_test.go",
        "manager_test.go",
        "router_test.go",
    ],
    embed = [":manager"],
    deps = [
        "//pkg/config",
        "//pkg/messaging/nats",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
