load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "telemetry",
    srcs = [
        "metrics.go",
        "middleware.go",
        "telemetry.go",
        "tracer.go",
    ],
    importpath = "grouter/pkg/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.17.0:v1_17_0",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "telemetry_test",
    srcs = [
        "telemetry_test.go",
        "tracer_test.go",
    ],
    embed = [":telemetry"],
    deps = [
        "//pkg/config",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//assert",
    ],
)
