load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "natsdemosvc",
    embed = [":natsdemosvc_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "natsdemosvc_lib",
    srcs = ["main.go"],
    importpath = "grouter/services/natsdemosvc/cmd/natsdemosvc",
    visibility = ["//visibility:private"],
    deps = [
        "//services/natsdemosvc/internal/app",
        "@org_uber_go_zap//:zap",
    ],
)
