load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "verifier_lib",
    srcs = ["main.go"],
    importpath = "grouter/services/webdemosvc/cmd/verifier",
    visibility = ["//visibility:private"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "verifier",
    embed = [":verifier_lib"],
    visibility = ["//visibility:public"],
)
