load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "subscriber_lib",
    srcs = ["main.go"],
    importpath = "grouter/pkg/messaging/nats/test/subscriber",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/messaging/nats",
        "//pkg/telemetry",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_spf13_viper//:viper",
        "@io_opentelemetry_go_otel//:otel",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "subscriber",
    embed = [":subscriber_lib"],
    visibility = ["//visibility:public"],
)
